--- a/src/css/webradio.css
+++ b/src/css/webradio.css
@@ -1,6 +1,8 @@
 .icon-bar-bottom { position: absolute; bottom: 0px; }
 .hidden { display: none; }
 
+.responsive { max-width: 100%; max-height: 100%; }
+
 #content { background: #979797; height: 100%; }
 
 .play-wrapper { max-width: 90%; }
@@ -14,3 +16,8 @@
 {
 	.play-buttons { font-size: 66px; }
 }
+
+.list { margin: 20px 20px; }
+
+.search-bar {  }
+.search-bar input { position: absolute; top: 2%; left: 1%; max-width: 98%; }
