--- a/src/css/webradio.css
+++ b/src/css/webradio.css
@@ -1,23 +1,26 @@
-.icon-bar-bottom { position: absolute; bottom: 0px; }
+.icon-bar-bottom { position: fixed; bottom: 0px; }
 .hidden { display: none; }
 
 .responsive { max-width: 100%; max-height: 100%; }
 
-#content { background: #979797; height: 100%; }
+#content { overflow: hidden; }
 
-.play-wrapper { max-width: 90%; }
-.play-content { margin: 0 auto; max-width: 400px; max-height: 500px; }
-.play-content img { border-radius: 50px; }
-@media all and (max-width: 40px)
+.play-wrapper { position: relative margin: 0 auto; max-width: 90%; }
+.play-content { margin: 0 auto; max-width: 400px; }
+.play-img { border-radius: 50px; }
+@media all and (max-width: 446px)
 {
 	.play-buttons { font-size: 15vw; }
 }
-@media all and (min-width: 400px)
+@media all and (min-width: 446px)
 {
 	.play-buttons { font-size: 66px; }
 }
 
 .list { margin: 20px 20px; }
 
-.search-bar {  }
-.search-bar input { position: absolute; top: 2%; left: 1%; max-width: 98%; }
+.input { margin-top: 10px; margin-left: 10px; margin-right: 10px; }
+.input-button {  }
+
+.img-container { position: relative; }
+.img-container img { position: absolute; }
