--- a/src/css/webradio.css
+++ b/src/css/webradio.css
@@ -6,7 +6,15 @@
 #content { overflow: hidden; }
 
 .play-wrapper { position: relative margin: 0 auto; max-width: 90%; }
-.play-content { margin: 0 auto; max-width: 400px; }
+.play-content
+{
+	margin: 0 auto;
+	max-width: 400px;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
 .play-img { border-radius: 50px; }
 @media all and (max-width: 446px)
 {
