--- a/src/css/webradio.css
+++ b/src/css/webradio.css
@@ -6,8 +6,8 @@
 
 .responsive
 {
-	max-width: 100%;
-	max-height: 100%;
+	/*max-width: 100%;
+	max-height: 100%;*/
 }
 
 #content
@@ -17,16 +17,15 @@
 
 .play-content
 {
-	max-width: 400px;
+	/*max-width: 400px;*/
+	width: 100%;
+	text-align: center;
 	position: absolute;
 	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(0%, -50%);
 }
 .play-img
 {
-	width: 100%;
-	height: 400px;
 	background-color: black;
 }
 
@@ -38,20 +37,19 @@
 .input
 {
 	margin-top: 10px;
-	margin-left: 10px;
+	margin-left: 2%;
 	margin-right: 10px;
+	width: 96%;
 }
-
-.img-container { position: relative; }
-.img-container img { position: absolute; }
+.input-button
+{
+	margin-left: 2%;
+	width: 96%;
+}
 
 @media all and (max-width: 446px)
 {
 	.play-buttons { font-size: 15vw; }
-}
-@media all and (min-width: 446px)
-{
-	.play-buttons { font-size: 66px; }
 }
 
 .hidden
