--- a/src/css/webradio.css
+++ b/src/css/webradio.css
@@ -17,7 +17,6 @@
 
 .play-content
 {
-	/*max-width: 400px;*/
 	width: 100%;
 	text-align: center;
 	position: absolute;
@@ -26,6 +25,7 @@
 }
 .play-img
 {
+	max-width: 80%;
 	background-color: black;
 }
 
@@ -38,7 +38,6 @@
 {
 	margin-top: 10px;
 	margin-left: 2%;
-	margin-right: 10px;
 	width: 96%;
 }
 .input-button
